--- a/tmux.config
+++ b/tmux.config
@@ -24,17 +24,17 @@ bind - split-window -v
 # General configuration.
 # $ tmux show-options -g
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
 
 set-option -g default-shell /bin/zsh
 set -g base-index 1
 set -g display-time 5000
 set -g repeat-time 1000
 set -g status-keys vi
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
 set -g status-justify left
@@ -60,12 +60,12 @@ set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg
 
 #Configuration for each window.
 #$ tmux show-window-options -g
-setw -g utf8 on
+#setw -g utf8 on
 setw -g window-status-format " #I$ #W "
 setw -g window-status-current-format " #I$ #W "
-setw -g window-status-current-bg yellow
-setw -g window-status-current-fg blue
-setw -g window-status-current-attr default
+#setw -g window-status-current-bg yellow
+#setw -g window-status-current-fg blue
+#setw -g window-status-current-attr default
 
 
 #选择分割的窗格
